Fix styling of lists in admonitions, rework Sphinx project for testing
Specifically:

- Remove the CSS rules that expand bullet point padding when they appear inside
  an admonition.

  There is no reason for this that I can figure out, it looks bad, it is
  inconsistent with list styling outside of admonitions, and it removes the
  distinction between closed lists and open lists (see "Lists" section in
  https://github.com/crate/crate-docs/blob/main/style/rst.rst)

- Added some test content to `docs/index.rst` that allows you to view how
  different lists are styled in different contexts.

  Additionally, I reworked the rest of `docs/index.rst` to make it clear this
  is a sample Sphinx project we can use to visually test the theme.

--- a/src/crate/theme/rtd/crate/static/css/custom.css
+++ b/src/crate/theme/rtd/crate/static/css/custom.css
@@ -608,7 +608,7 @@ div.sidebar {
   margin-bottom: 0;
 }
 
-.wrapper-content-right ul, 
+.wrapper-content-right ul,
 .wrapper-content-right ol {
   margin-bottom: 16px;
   margin-left: 16px;
@@ -1195,7 +1195,7 @@ div.sidebar {
 }
 
 /* preload image */
-#ratingForm { 
+#ratingForm {
   background: url('../images/cr-star-full.svg') no-repeat -9999px -9999px;
 }
 
@@ -1256,7 +1256,7 @@ div.sidebar {
   min-width: 170px;
 }
 
-#ratingVote:disabled, 
+#ratingVote:disabled,
 #ratingVote[disabled] {
   color: #ccc;
   display: none;
@@ -1383,4 +1383,12 @@ footer .footer-listitem-new:first-child a {
     margin: 8px 0;
   }
 
+}
+
+div.admonition ul.simple p {
+    padding: 0;
+}
+
+div.admonition ul.open p {
+    padding: 0 0 10px 0;
 }
